# our-ultra-jennie

./: .cursorrules  .dockerignore  .env  .gitignore  CLAUDE.md  DEBUGGING_GUIDE.md  Jenkinsfile  LICENSE  README.md  docker-compose.yml  requirements.txt  secrets.example.json  test_output.txt  test_output_v2.txt  test_output_v3.txt
.ai/: RULES.md
.github/: copilot-instructions.md
analysis/: factor_analysis_report.md  run_factor_analysis.py
configs/: gpt_v2_strategy_presets.json  guardrails.yaml
docs/: BACKTEST_GUIDE.md  FAST_HANDS_SLOW_BRAIN_STRATEGY.md  GCP_TO_WSL_MIGRATION.md  INSTALLATION_GUIDE.md  LLM_SCOUT_LOGIC_REVIEW_REQUEST.md  NEXT_LEVEL_ROADMAP.md  SCHEDULER_ARCHITECTURE.md  SCOUT_HYBRID_SCORING.md  SCOUT_V5_1_IMPLEMENTATION_PLAN.md  SCOUT_V5_HYBRID_SCORING.md  data_accumulation_implementation_report.md  database-refactor-plan.md  hybrid_llm_system_report.md  local_llm_integration_plan.md  long_term_data_strategy.md  refactor-large-files-plan.md  telegram-commands.md
infrastructure/: env-vars-mock.yaml  env-vars-real.yaml  env-vars-wsl.yaml
prompts/: __init__.py  competitor_benefit_prompt.py  scout_prompt.py
schemas/: __init__.py  llm_response.py
scripts/: analyze_watchlist.py  antigravity_bridge.py  backfill_news_naver.py  build_strategy_core.sh  check_data_volume.py  check_factor_data_availability.py  check_final_status.py  check_prices.py  check_schema.py  collect_dart_filings.py  collect_full_market_data_parallel.py  collect_intraday.py  debug_news_data.py  (+39 more)
shared/strategy_core/: Cargo.toml  pyproject.toml
shared/strategy_core/src/: lib.rs
(+229 files in other folders)
