[package]
name = "strategy_core"
version = "0.1.0"
edition = "2021"
description = "High performance technical indicator engine for my-supreme-jennie"
license = "Proprietary"

[lib]
name = "strategy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.4", features = ["extension-module"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
